# kurokos

./: .gitignore  README.md  build-demo.cmd  kurokon.cabal  kurokos.cabal  package.yaml  setup-font.sh  stack.yaml
_data/: _check-assets.rb  assets-global.yaml  assets.yaml  assets1.yaml  assets2.yaml  gui-color-scheme.yaml  gui-stylemap.yaml  gui-title.yaml  gui-uitest.yaml  system-assets.yaml
app/: Main.hs
csrc/: ttf_helper.c  ttf_helper.h
demo-src/: Import.hs  Main.hs  Pad.hs  Scene.hs  TestGui.hs
doc/: boilerplates.md  depend.gv  make-graphs.sh  make-gui-using-asset.gv
kurokos-archive/: .gitignore  README.md  kurokos-archive.cabal  stack.yaml
kurokos-archive/_target/: text1.txt
kurokos-archive/_target/child/: text2.txt
kurokos-archive/src-demo/: Main.hs
kurokos-archive/src/Kurokos/: Archive.hs
kurokos-archive/src/Kurokos/Internal/: Archive.hs  Encrypt.hs  Extract.hs  Helper.hs  Types.hs  Util.hs
kurokos-asset/: README.md  kurokos-asset.cabal  stack.yaml
kurokos-asset-raw/: README.md  kurokos-asset-raw.cabal
kurokos-asset-raw/src/Kurokos/Asset/: Raw.hs
kurokos-asset-raw/src/Kurokos/Asset/Internal/: AssetList.hs  AssetManager.hs  Types.hs
kurokos-asset-raw/src/Kurokos/Asset/Internal/Archive/: Encrypt.hs  Exporter.hs  Importer.hs
kurokos-asset-sdl2/: README.md  kurokos-asset-sdl2.cabal  stack.yaml
kurokos-asset-sdl2/src/Kurokos/Asset/: SDL.hs
kurokos-asset/_sample/child/_ignore/: text3.txt
kurokos-asset/src/Kurokos/: Asset.hs
kurokos-asset/src/Kurokos/Asset/: AssetManager.hs  Types.hs
kurokos-asset/src/Kurokos/Asset/Internal/: AssetList.hs  AssetManager.hs  Types.hs
kurokos-asset/src/Kurokos/Asset/Internal/Archive/: Util.hs
kurokos-asset/src/Kurokos/Internal/: AssetList.hs  AssetManager.hs  Glob.hs  Types.hs
kurokos-asset/src/Kurokos/Internal/Archive/: Decode.hs  Encode.hs  Encrypt.hs  Exporter.hs  Importer.hs  Util.hs
kurokos-calc/: README.md  kurokos-calc.cabal  stack.yaml
kurokos-calc/src/Kurokos/: Calculator.hs
kurokos-gfx/: .gitignore  README.md  kurokos-gfx.cabal  package.yaml  stack.yaml
kurokos-gfx/_data/: basic-text.frag  basic-texture.vert  basic.frag  basic.vert  tex.frag  tex.vert
kurokos-gfx/src-test/: Main.hs
kurokos-gfx/src/Kurokos/: Graphics.hs  Renderer.hs
kurokos-gfx/src/Kurokos/Graphics/: Camera.hs  Font.hs  Matrix.hs  Primitive.hs  Render.hs  Shader.hs  Text.hs  Texture.hs  Types.hs  Util.hs  Vect.hs
kurokos-gfx/src/Kurokos/Graphics/Shader/: Basic.hs  Primitive.hs  Text.hs
kurokos-gfx/src/Kurokos/Graphics/Texture/: Util.hs
kurokos-rpn/: README.md  kurokos-rpn.cabal
kurokos-rpn/app/: Main.hs
kurokos-rpn/src/Kurokos/: RPN.hs
kurokos-sdl2-gfx/: .gitignore  README.md  kurokos-sdl2-gfx.cabal  stack.yaml
kurokos-sdl2-gfx/scripts/: makeffi.hs  run.sh
kurokos-sdl2-gfx/src/SDL/: Primitive.hs
kurokos-sdl2-gfx/src/SDL/Raw/: Primitive.hs
kurokos-text/: README.md  kurokos-text.cabal  package.yaml  stack.yaml
kurokos-text/sample/: sample.yaml
kurokos-text/src-test/: Main.hs
kurokos-text/src/Kurokos/: Text.hs
kurokos-text/src/Kurokos/Text/: Parse.hs  Types.hs
kurokos-ui/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
kurokos-ui/src/Kurokos/: UI.hs
kurokos-ui/src/Kurokos/UI/: Color.hs  Control.hs  Core.hs  Cursor.hs  Def.hs  Event.hs  Helper.hs  Import.hs  Scheme.hs  Types.hs  Update.hs  Util.hs  Widget.hs  WidgetTree.hs
kurokos-ui/src/Kurokos/UI/Color/: Scheme.hs
kurokos-ui/src/Kurokos/UI/Control/: Control.hs  Cursor.hs  Helper.hs
kurokos-ui/src/Kurokos/UI/File/: Convert.hs  Yaml.hs
kurokos-ui/src/Kurokos/UI/Widget/: Make.hs  Module.hs  Names.hs  Render.hs  Update.hs
src/: Kurokos.hs  Protonic.hs
src-demo/: Action.hs  Game.hs  Import.hs  Main.hs  MyAction.hs  Pad.hs  Scene.hs
src-demo/Scene/: Game.hs  UITest.hs
src/Kurokos/: Asset.hs  Core.hs  Data.hs  Exception.hs  Font.hs  GUI.hs  Helper.hs  Metapad.hs  Render.hs  Sprite.hs  Texture.hs  Types.hs
src/Kurokos/GUI/: Core.hs  Def.hs  Event.hs  Helper.hs  Import.hs  Test.hs  Types.hs  Update.hs  Widget.hs  WidgetTree.hs
src/Kurokos/GUI/File/: Convert.hs  Yaml.hs
src/Kurokos/GUI/Widget/: Label.hs  Make.hs  Module.hs  Render.hs
src/Protonic/: Core.hs  Data.hs  Font.hs  Font_.hs  Metapad.hs  Render.hs  Sprite.hs  TTFHelper.hsc
