name:                kurokon
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/kurokon#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Protonic
  other-modules:       Protonic.Core
                     , Protonic.Data
                     , Protonic.Font_
                     , Protonic.Metapad
                     , Protonic.Render
                     , Protonic.Sprite
                     , Protonic.TTFHelper
  pkgconfig-depends:   sdl2 >= 2
                     , SDL2_ttf >= 2
  build-depends:       base >= 4.7 && < 5
                     , sdl2 >= 2.2.0
                     , sdl2-ttf >= 1.0.0
                     , sdl2-image
                     -- , sdl2-mixer
                     , transformers
                     , mtl
                     , containers
                     , bytestring
                     , safe-exceptions
                     , text
                     , vector
                     , managed
                     , linear
                     , directory
                     , safe
  c-sources:           csrc/ttf_helper.c
  include-dirs:        csrc
  includes:            csrc/ttf_helper.h
  default-language:    Haskell2010

executable demo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kurokon
                     , sdl2 >= 2
                     , text
                     , lens
                     , mtl
                     , linear
                     , vector
                     , bytestring
  default-language:    Haskell2010

test-suite kurokon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kurokon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/kurokon
