name:                kurokos
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/masatoko/kurokos#readme
license:             BSD3
license-file:        LICENSE
author:              Masatoko
maintainer:          masatokodo@gmail.com
copyright:           2017 Masatoko
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kurokos
  other-modules:       Kurokos.Core
                     , Kurokos.Data
                     , Kurokos.Font
                     , Kurokos.Metapad
                     , Kurokos.Render
                     , Kurokos.Sprite
  pkgconfig-depends:   sdl2 >= 2
                     , SDL2_ttf >= 2
  build-depends:       base >= 4.7 && < 5
                     , sdl2 >= 2.2.0
                     , sdl2-ttf >= 2.0.0
                     , sdl2-image
                     -- , sdl2-mixer
                     , transformers-base
                     , transformers
                     , mtl
                     , monad-control
                     , containers
                     , bytestring
                     , safe-exceptions
                     , text
                     , vector
                     , managed
                     , resourcet
                     , linear
                     , directory
                     , safe
  default-language:    Haskell2010

executable demo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kurokos
                     , sdl2 >= 2
                     , text
                     , lens
                     , mtl
                     , linear
                     , vector
                     , bytestring
                     , resourcet
  default-language:    Haskell2010

test-suite kurokos-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kurokos
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/masatoko/kurokos
