name:                kurokos-asset-raw
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/masatoko/kurokos/kurokos-asset-raw#readme
license:             BSD3
license-file:        LICENSE
author:              Masato Kobayashi
maintainer:          masatoko@gmail.com
copyright:           2017 Masato Kobayashi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kurokos.Asset.Raw
                     , Kurokos.Asset.Internal.Types
  other-modules:       Kurokos.Asset.Internal.AssetManager
                     , Kurokos.Asset.Internal.AssetList
                     , Kurokos.Asset.Internal.Archive.Importer
                     , Kurokos.Asset.Internal.Archive.Exporter
                     , Kurokos.Asset.Internal.Archive.Encrypt
                     , Kurokos.Asset.Internal.Archive.Util
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , containers
                     , mtl
                     , filepath
                     , yaml
                     , Glob >= 0.9
                     , mmap
                     , unix-compat
                     , cryptohash
                     , safe
                     , split
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

source-repository head
  type:     git
  location: https://github.com/masatoko/kurokos/kurokos-asset-raw
