name:                kurokos-asset-sdl2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/masatoko/kurokos/kurokos-asset-sdl2#readme
license:             BSD3
license-file:        LICENSE
author:              Masato Kobayashi
maintainer:          masatokodo@gmail.com
copyright:           2017 Masato Kobayashi
category:            Utility
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    Kurokos.Asset.SDL
  build-depends:
      base >= 4.7 && < 5
    , sdl2 >= 2.4.0
    , sdl2-ttf >= 2.0.0
    , sdl2-image
    , kurokos-asset-raw
    , containers
    , bytestring
    , text
    , filepath
  default-language:
    Haskell2010

source-repository head
  type:     git
  location: https://github.com/masatoko/kurokos/kurokos-asset-sdl2
