name:                kurokos-sdl2-gfx
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/kurokos-sdl2-gfx#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SDL.Primitive
  other-modules:       SDL.Raw.Primitive
  pkgconfig-depends:   sdl2 >= 2.0.4
                     , SDL2_gfx >= 1.0.1
  build-depends:       base >= 4.7 && < 5
                     , sdl2 >= 2
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/kurokos-sdl2-gfx
